fix dropdown overflow issue

--- a/blocks-styles/dropdowns.styl
+++ b/blocks-styles/dropdowns.styl
@@ -42,6 +42,12 @@
         margin: 10px 0;
       }
     }
+    
+    .blx-dropdown-text {
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+    }
 
     &.blx-dropdown-trigger-placeholder {
       color: $ui-07;
